--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -86,6 +86,9 @@
 - name: "component: AI File Context"
   color: "000"
   description: "Issues related to the AI File Context component"
+- name: "component: AI Models"
+  color: "000"
+  description: "Issues related to the AI Models component"
 - name: "component: AI Chat"
   color: "000"
   description: "Issues related to the Chat component"
