--- a/Solution.props
+++ b/Solution.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <SolutionVersion>0.3.5-alpha</SolutionVersion>
+    <SolutionVersion>0.4.0-dev.250719</SolutionVersion>
   </PropertyGroup>
 </Project>
