refactor(aimodels): added missing icon for aimodels component

--- a/Solution.props
+++ b/Solution.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <SolutionVersion>0.3.5-alpha</SolutionVersion>
+    <SolutionVersion>0.3.6-dev.250720</SolutionVersion>
   </PropertyGroup>
 </Project>
