--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -65,6 +65,9 @@
 - name: "component: AI TextGenerate"
   color: "000"
   description: "Issues related to the AI Text Generate component"
+- name: "component: AI TextListGenerate"
+  color: "000"
+  description: "Issues related to the AI Text List Generate component"
 - name: "component: AI ScriptReview"
   color: "000"
   description: "Issues related to the AI Script Review component"
@@ -141,3 +144,6 @@
 - name: "scope: Toolbar menu"
   color: "000"
   description: "Issues related to the Toolbar menu"
+- name: "scope: Component Base"
+  color: "000"
+  description: "Issues related to the Component Base"
