--- a/Solution.props
+++ b/Solution.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <SolutionVersion>0.4.1-alpha</SolutionVersion>
+    <SolutionVersion>0.5.0-dev.250726</SolutionVersion>
   </PropertyGroup>
 </Project>
