--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -68,6 +68,9 @@
 - name: "component: AI TextListGenerate"
   color: "000"
   description: "Issues related to the AI Text List Generate component"
+- name: "component: AI ImgGenerate"
+  color: "000"
+  description: "Issues related to the AI Image Generate component"
 - name: "component: AI ScriptReview"
   color: "000"
   description: "Issues related to the AI Script Review component"
