ci(tests): new model manager and context manager tests

--- a/Solution.props
+++ b/Solution.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <SolutionVersion>0.5.1-alpha</SolutionVersion>
+    <SolutionVersion>0.5.2-dev.250731</SolutionVersion>
   </PropertyGroup>
 </Project>
