--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -59,6 +59,9 @@
 - name: "component: AI GhGenerate"
   color: "000"
   description: "Issues related to the AI Grasshopper Generate Definitions component"
+- name: "component: AI GhConnect"
+  color: "000"
+  description: "Issues related to the AI Grasshopper Connect component"
 - name: "component: AI TextEvaluate"
   color: "000"
   description: "Issues related to the AI Text Evaluate component"
