--- a/.github/actions/documentation/update-badges/action.yml
+++ b/.github/actions/documentation/update-badges/action.yml
@@ -1,5 +1,5 @@
 name: 'Update Badges'
-description: 'Update the version and status badges in README.md'
+description: 'Update the version and status badges in README.md (HTML for-the-badge)'
 inputs:
   branch:
     description: 'Branch name (for context)'
@@ -25,90 +25,55 @@ runs:
         echo "Current version: $VERSION"
         echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-    - name: Update version badge in README.md
+    - name: Update badges in README.md (HTML)
       id: update-badge
       shell: bash
       run: |
         # Get the current version
         VERSION="${{ steps.get-version.outputs.version }}"
-        
         echo "Current version from Solution.props: $VERSION"
-        
-        # Format version for shields.io by encoding special characters
-        ENCODED_VERSION=$(echo "$VERSION" | sed 's/-/--/g' | sed 's/\./%2E/g')
-        
-        # Determine color and status based on version
+
+        # Shields escaping for version: '-' -> '--', '_' -> '__', ' ' -> '_'
+        SHIELDS_VERSION=${VERSION//_/__}
+        SHIELDS_VERSION=${SHIELDS_VERSION//-/--}
+        SHIELDS_VERSION=${SHIELDS_VERSION// /_}
+
+        # Determine status color/text from suffix
+        STATUS_COLOR="brightgreen"
+        STATUS_TEXT="Stable"
         if [[ $VERSION == *"-dev"* ]]; then
-          COLOR="brown"
-          STATUS="Unstable%20Development"
+          STATUS_COLOR="brown"
+          STATUS_TEXT="Unstable%20Development"
         elif [[ $VERSION == *"-alpha"* ]]; then
-          COLOR="orange"
-          STATUS="Alpha"
+          STATUS_COLOR="orange"
+          STATUS_TEXT="Alpha"
         elif [[ $VERSION == *"-beta"* ]]; then
-          COLOR="yellow"
-          STATUS="Beta"
+          STATUS_COLOR="yellow"
+          STATUS_TEXT="Beta"
         elif [[ $VERSION == *"-rc"* ]]; then
-          COLOR="lightblue"
-          STATUS="Release%20Candidate"
-        else
-          COLOR="lightgreen"
-          STATUS="Stable"
+          STATUS_COLOR="purple"
+          STATUS_TEXT="Release%20Candidate"
         fi
-        
-        # Create new badge URLs
-        VERSION_BADGE_URL="https://img.shields.io/badge/version-$ENCODED_VERSION-$COLOR"
-        STATUS_BADGE_URL="https://img.shields.io/badge/status-$STATUS-$COLOR"
-        
-        # Create badge markdown
-        VERSION_BADGE="[![Version]($VERSION_BADGE_URL)](https://github.com/architects-toolkit/SmartHopper/releases)"
-        STATUS_BADGE="[![Status]($STATUS_BADGE_URL)](https://github.com/architects-toolkit/SmartHopper/releases)"
-        
-        echo "New version badge: $VERSION_BADGE"
-        echo "New status badge: $STATUS_BADGE"
-        
+
         BADGES_CHANGED=false
-        
-        # Update README.md with new badges
         if [[ -f "README.md" ]]; then
-          # Check if README contains version badge and if it needs updating
-          if grep -q "\[\!\[Version\]" README.md; then
-            echo "Found version badge in README"
-            
-            # Extract current badge URL to check if color matches
-            CURRENT_VERSION_BADGE=$(grep -o "\[\!\[Version\](https://img\.shields\.io/badge/version[^)]*)" README.md || echo "")
-            
-            # Check if the badge needs updating (different version or color)
-            if [[ "$CURRENT_VERSION_BADGE" != *"$ENCODED_VERSION"* || "$CURRENT_VERSION_BADGE" != *"-$COLOR"* ]]; then
-              sed -i "s|\[\!\[Version\](https://img\.shields\.io/badge/version[^)]*)|[![Version]($VERSION_BADGE_URL)|g" README.md
-              echo "Updated version badge"
-              BADGES_CHANGED=true
-            else
-              echo "Version badge is already up to date"
-            fi
+          # Update VERSION badge: set color to STATUS_COLOR and replace the version segment
+          if grep -q 'img.shields.io/badge/version-' README.md; then
+            sed -i -E "s|(img.shields.io/badge/version-)[^-?]+-[a-zA-Z]+(\?style=for-the-badge)|\1${SHIELDS_VERSION}-${STATUS_COLOR}\2|" README.md && BADGES_CHANGED=true
+            echo "Updated HTML version badge to ${SHIELDS_VERSION} with color ${STATUS_COLOR}"
           else
-            echo "No version badge found in README to replace"
+            echo "No HTML version badge found to update"
           fi
-          
-          # Check if README contains status badge and if it needs updating
-          if grep -q "\[\!\[Status\]" README.md; then
-            echo "Found status badge in README"
-            
-            # Extract current badge URL to check if status or color matches
-            CURRENT_STATUS_BADGE=$(grep -o "\[\!\[Status\](https://img\.shields\.io/badge/status[^)]*)" README.md || echo "")
-            
-            # Check if the badge needs updating (different status or color)
-            if [[ "$CURRENT_STATUS_BADGE" != *"$STATUS"* || "$CURRENT_STATUS_BADGE" != *"-$COLOR"* ]]; then
-              sed -i "s|\[\!\[Status\](https://img\.shields\.io/badge/status[^)]*)|[![Status]($STATUS_BADGE_URL)|g" README.md
-              echo "Updated status badge"
-              BADGES_CHANGED=true
-            else
-              echo "Status badge is already up to date"
-            fi
+
+          # Update STATUS badge: replace status text and color
+          if grep -q 'img.shields.io/badge/status-' README.md; then
+            # Replace status text segment between 'status-' and '-<color>?style=for-the-badge'
+            sed -i -E "s|(img.shields.io/badge/status-)[^-?]+(-)[a-zA-Z]+(\?style=for-the-badge)|\1${STATUS_TEXT}\2${STATUS_COLOR}\3|" README.md && BADGES_CHANGED=true
+            echo "Updated HTML status badge to ${STATUS_TEXT} / ${STATUS_COLOR}"
           else
-            echo "No status badge found in README to replace"
+            echo "No HTML status badge found to update"
           fi
-          
-          # Output whether badges were changed
+
           echo "badges-changed=$BADGES_CHANGED" >> $GITHUB_OUTPUT
         else
           echo "README.md not found, skipping badge update"
