--- a/src/SmartHopper.Infrastructure/SmartHopper.Infrastructure.csproj
+++ b/src/SmartHopper.Infrastructure/SmartHopper.Infrastructure.csproj
@@ -13,7 +13,7 @@
   <PropertyGroup>
     <Version>$(SolutionVersion)</Version>
     <Title>SmartHopper Infrastructure</Title>
-    <Company>Architect's Toolkit (RKTK.tools)</Company>
+    <Company>Architect's Toolkit</Company>
     <Description>Menu and settings management for SmartHopper</Description>
     <Authors>Marc Roca Musach + SmartHopper Community</Authors>
     <Copyright>Copyright (c) 2024 Marc Roca Musach</Copyright>
