ci(labels): added missing labels

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -133,6 +133,12 @@
 - name: "provider: DeepSeek"
   color: "000"
   description: "Issues related to the DeepSeek provider"
+- name: "provider: OpenRouter"
+  color: "000"
+  description: "Issues related to the OpenRouter provider"
+- name: "provider: Anthropic"
+  color: "000"
+  description: "Issues related to the Anthropic provider"
 
 # Scope Labels
 - name: "scope: Settings"
@@ -141,12 +147,21 @@
 - name: "scope: AI Tools"
   color: "000"
   description: "Issues related to the AI tools"
+- name: "scope: AI Calls"
+  color: "000"
+  description: "Issues related to the AI Calls logic"
 - name: "scope: Provider Manager"
   color: "000"
   description: "Issues related to the Provider Manager"
 - name: "scope: Context Manager"
   color: "000"
   description: "Issues related to the Context Manager"
+- name: "scope: Model Manager"
+  color: "000"
+  description: "Issues related to the Model Manager"
+- name: "scope: Tool Manager"
+  color: "000"
+  description: "Issues related to the Tool Manager"
 - name: "scope: UI"
   color: "000"
   description: "Issues related to the UI features"
@@ -156,3 +171,9 @@
 - name: "scope: Component Base"
   color: "000"
   description: "Issues related to the Component Base"
+- name: "scope: Conversation Session"
+  color: "000"
+  description: "Issues related to the Conversation Session logic"
+- name: "scope: Canvas Assistant"
+  color: "000"
+  description: "Issues related to the Canvas Assistant logic"
