feat(workflows): new action to automatically set ready-to-use badge to YES on milestone close

--- a/.github/workflows/release-1-milestone.yml
+++ b/.github/workflows/release-1-milestone.yml
@@ -65,6 +65,13 @@ jobs:
         uses: ./.github/actions/documentation/update-badges
         id: update-badges
 
+      - name: Update Ready badge to YES (brightgreen)
+        uses: ./.github/actions/documentation/update-ready-badge
+        with:
+          status: YES
+          color: brightgreen
+          file: README.md
+
       # - name: Fix code style
       #   uses: ./.github/actions/code-style
       #   with:
