chore: bump version to 1.0.2-dev.251014

--- a/Solution.props
+++ b/Solution.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <SolutionVersion>1.0.1-alpha</SolutionVersion>
+    <SolutionVersion>1.0.2-dev.251014</SolutionVersion>
   </PropertyGroup>
 </Project>
