--- a/src/SmartHopper.Core.Grasshopper/SmartHopper.Core.Grasshopper.csproj
+++ b/src/SmartHopper.Core.Grasshopper/SmartHopper.Core.Grasshopper.csproj
@@ -24,21 +24,31 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grasshopper" Version="8.19.25132.1001" ExcludeAssets="runtime">
+    <PackageReference Include="Grasshopper" Version="8.24.25281.15001" ExcludeAssets="runtime">
       <Source>https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages</Source>
     </PackageReference>
     <PackageReference Include="HtmlAgilityPack" Version="1.12.1" />
-    <PackageReference Include="RhinoCommon" Version="8.19.25132.1001" ExcludeAssets="runtime">
+    <PackageReference Include="RhinoCommon" Version="8.24.25281.15001" ExcludeAssets="runtime">
       <Source>https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages</Source>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <Reference Include="RhinoCodePlatform.GH">
-      <HintPath>$(SolutionDir)\lib\Rhino\8.19\RhinoCodePlatform.GH.dll</HintPath>
+      <HintPath>$(SolutionDir)\lib\Rhino\8.24\RhinoCodePlatform.GH.dll</HintPath>
+      <Private>false</Private>
+      <CopyLocal>false</CopyLocal>
+    </Reference>
+    <Reference Include="RhinoCodePlatform.GH.Context">
+      <HintPath>$(SolutionDir)\lib\Rhino\8.24\RhinoCodePlatform.GH.Context.dll</HintPath>
+      <Private>false</Private>
+      <CopyLocal>false</CopyLocal>
+    </Reference>
+    <Reference Include="Rhino.Runtime.Code">
+      <HintPath>$(SolutionDir)\lib\Rhino\8.24\Rhino.Runtime.Code.dll</HintPath>
       <Private>false</Private>
       <CopyLocal>false</CopyLocal>
     </Reference>
     <Reference Include="RhinoCodePluginGH">
-      <HintPath>$(SolutionDir)\lib\Rhino\8.19\RhinoCodePluginGH.gha</HintPath>
+      <HintPath>$(SolutionDir)\lib\Rhino\8.24\RhinoCodePluginGH.gha</HintPath>
       <Private>false</Private>
       <CopyLocal>false</CopyLocal>
     </Reference>
