refactor: consolidate script creation and editing into unified script_generator tool

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -77,9 +77,9 @@
 - name: "component: AI ScriptReview"
   color: "000"
   description: "Issues related to the AI Script Review component"
-- name: "component: AI ScriptGenerate"
+- name: "component: AI ScriptGenerator"
   color: "000"
-  description: "Issues related to the AI Script Generate component"
+  description: "Issues related to the AI Script Generator component"
 - name: "component: AI ListEvaluate"
   color: "000"
   description: "Issues related to the AI List Evaluate component"
