--- a/Solution.props
+++ b/Solution.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <SolutionVersion>1.1.0-alpha</SolutionVersion>
+    <SolutionVersion>1.2.0-dev.251124</SolutionVersion>
   </PropertyGroup>
 </Project>
