feat: expand keyword tags for better discoverability
- Added programming language keywords (Python, C#, VB, IronPython)
- Added code-related terms (programming, code, codex) to improve search visibility

--- a/yak-package/manifest.yml
+++ b/yak-package/manifest.yml
@@ -20,9 +20,18 @@ keywords:
   - forum
   - chat
   - gpt
-  - scripting
   - assistant
   - help
+  - scripting
+  - programming
+  - code
+  - codex
+  - python
+  - visual-basic
+  - vb
+  - c#
+  - csharp
+  - ironpython
   - open-ai
   - mistral
   - deepseek
