feat(ui): add dialog-to-canvas visual linking system
Added DialogCanvasLink utility that draws visual connection lines from dialogs to linked Grasshopper components:

- Created DialogCanvasLink class that manages visual connections between dialogs and canvas components using bezier curves with anchor dots, similar to script editor anchors
- StyledMessageDialog methods now accept optional linkedInstanceGuid and linkLineColor parameters to enable canvas linking
- Registered canvas link callback in

--- a/.github/actions/dotnet-build/action.yml
+++ b/.github/actions/dotnet-build/action.yml
@@ -62,6 +62,12 @@ runs:
           Write-Host "signing.snk already exists"
         }
 
+    - name: 'Update InternalsVisibleTo with public key'
+      shell: pwsh
+      run: |
+        Write-Host "Updating InternalsVisibleTo entries with public key from signing.snk"
+        pwsh tools/Update-InternalsVisibleTo.ps1
+
     - name: 'Checkout unlicensed lib'
       uses: actions/checkout@v4
       with:
