--- a/Solution.props
+++ b/Solution.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <SolutionVersion>1.2.4-alpha</SolutionVersion>
+    <SolutionVersion>1.3.0-dev.260111</SolutionVersion>
   </PropertyGroup>
 </Project>
