--- a/src/SmartHopper.Core.Grasshopper/SmartHopper.Core.Grasshopper.csproj
+++ b/src/SmartHopper.Core.Grasshopper/SmartHopper.Core.Grasshopper.csproj
@@ -32,6 +32,8 @@
       <Source>https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages</Source>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="JsonSchema.Net" Version="7.2.2" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
     <Reference Include="RhinoCodePlatform.GH">
       <HintPath>$(SolutionDir)\lib\Rhino\8.24\RhinoCodePlatform.GH.dll</HintPath>
       <Private>false</Private>
