refactor: enable CopyLocalLockFileAssemblies and normalize FilterParser.cs encoding
- Added CopyLocalLockFileAssemblies property to Core.Grasshopper project to ensure dependency assemblies are copied to output
- Changed FilterParser.cs file encoding from ASCII to UTF-8 with BOM

--- a/src/SmartHopper.Core.Grasshopper/SmartHopper.Core.Grasshopper.csproj
+++ b/src/SmartHopper.Core.Grasshopper/SmartHopper.Core.Grasshopper.csproj
@@ -8,6 +8,7 @@
     <NoWarn>NU1701;NETSDK1086;MSB3243;SA1124;SA1200</NoWarn>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   
   <PropertyGroup>
