--- a/src/SmartHopper.Core/SmartHopper.Core.csproj
+++ b/src/SmartHopper.Core/SmartHopper.Core.csproj
@@ -49,7 +49,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SmartHopper.Infrastructure\SmartHopper.Infrastructure.csproj" />
-    <ProjectReference Include="..\..\..\ghjson-dotnet\src\GhJSON.Core\GhJSON.Core.csproj" />
+    <PackageReference Include="GhJSON.Core" Version="1.0.0" />
   </ItemGroup>
 
   <!-- For Windows only builds -->
