chore: add automated copyright year update workflow and centralize metadata in Directory.Build.props
- Added GitHub Actions workflow to automatically update copyright years on January 1st each year
- Created Update-CopyrightYear.ps1 script to update <Copyright> metadata in Directory.Build.props
- Centralized Version, Company, Authors, and Copyright metadata in Directory.Build.props
- Removed duplicate metadata properties from all project files (*.csproj)
- Added LGPL license headers to all project

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project>
+  <!-- Metadata for .NET project -->
+  <PropertyGroup>
+    <Version>$(SolutionVersion)</Version>
+    <Company>Architect's Toolkit</Company>
+    <Authors>Marc Roca Musach + SmartHopper Community</Authors>
+    <Copyright>Copyright (C) 2024-2026 Marc Roca Musach</Copyright>
+  </PropertyGroup>
+
   <PropertyGroup>
     <!-- Use latest C# and enable nullable refs -->
     <LangVersion>latest</LangVersion>
