--- a/src/SmartHopper.Providers.OpenAI/SmartHopper.Providers.OpenAI.csproj
+++ b/src/SmartHopper.Providers.OpenAI/SmartHopper.Providers.OpenAI.csproj
@@ -1,3 +1,20 @@
+﻿<!--
+  SmartHopper - AI-powered Grasshopper Plugin
+  Copyright (C) 2024-2026 Marc Roca Musach
+
+  This library is free software; you can redistribute it and/or
+  modify it under the terms of the GNU Lesser General Public
+  License as published by the Free Software Foundation; either
+  version 3 of the License, or (at your option) any later version.
+
+  This library is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+  Lesser General Public License for more details.
+
+  You should have received a copy of the GNU Lesser General Public License
+  along with this library; if not, see <https://www.gnu.org/licenses/lgpl-3.0.html>.
+-->
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <Import Project="$(SolutionDir)Solution.props" Condition="Exists('$(SolutionDir)Solution.props')" />
@@ -8,6 +25,11 @@
     <NoWarn>NU1701;NETSDK1086;SA1124;SA1200</NoWarn>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <Title>SmartHopper OpenAI Provider</Title>
+    <Description>OpenAI provider for SmartHopper</Description>
   </PropertyGroup>
 
   <!-- This property controls the output path for the compiled assembly -->
