--- a/yak-package/manifest.yml
+++ b/yak-package/manifest.yml
@@ -3,7 +3,7 @@
 name: SmartHopper
 version: {{VERSION}}
 description: >
-  SmartHopper brings new AI-powered components and an AI chat to Grasshopper3D.
+  SmartHopper, the Open Source AI plugin for Grasshopper3D, brings new AI-powered components and an AI chat to your canvas.
 
   ----
 
